2001-01-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: Use ORAC::Msg::EngineLaunch

	* Display/P4.pm:  Use ORAC::Msg::EngineLaunch

	* Calib/SCUBA.pm: Use ORAC::Msg::EngineLaunch

	* Convert.pm (new): Use ORAC::Msg::EngineLaunch

2001-01-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm: Use
	orac_determine_initial_algorithm_engines.

	* Inst/CGS4.pm (start_algorithm_engines): Use
	orac_determine_initial_algorithm_engines.

	* Inst/IRCAM.pm (start_algorithm_engines): Use
	orac_determine_initial_algorithm_engines.

	* Inst/Defn.pm (orac_determine_initial_algorithm_engines): Now
	list monoliths required for pre-launch 

	* Msg/EngineLaunch.pm: - allow for launch of multiple engines at
	once. Provide contact_all method. Make sure that each
	instantiation returns the same object instance.

2001-01-09  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Inst/Defn.pm (orac_engine_description): Add function to support 
	ORAC::Msg::EngineLaunch.

	* Msg/EngineLaunch.pm: Create 

2001-01-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm (orac_determine_recipe_search_path): Add search
	path information for primitives and recipes

	* Basic.pm: Move guts to ORAC::Recipe 

	* Recipe.pm: Create. Complete reworking of ORAC::Basic recipe handling

	* General.pm (log10): Fix -w warning by not importing POSIX::log10

	* Display/KAPVIEW.pm (select_section): Fix = in conditional

	* Core.pm (orac_process_frame): Use ORAC::Recipe

2001-01-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm: Now inherits from Inst::ADAM

	* Inst/CGS4.pm: Now inherits from Inst::ADAM

	* Inst/IRCAM.pm: Now inherits from Inst::ADAM

	* Inst/Defn.pm: Create generic instrumentation config file 

	* Inst/ADAM.pm: Create base class for ADAM messaging startup

	* Inst/InitMsg.pm: Create base class for messaging startup

	* Basic.pm (orac_exit_normally): rmtree ADAM_USER only if it exists

2000-10-31  Tim Jenness  <timj@jach.hawaii.edu>
