@@ -1,5 +1,7 @@
 2001-01-11  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Frame/Michelle.pm: Now a subclass of CGS4
+
 	* Display/KAPVIEW.pm: Use ORAC::Msg::EngineLaunch
 
 	* Display/P4.pm:  Use ORAC::Msg::EngineLaunch
